--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Cristian Baldi",
-  "license": "MIT",
+  "license": "GPL",
   "dependencies": {
     "express": "~4.10.2",
     "socket.io": "~1.2.0"
